--- a/.github/workflows/spotify.yml
+++ b/.github/workflows/spotify.yml
@@ -1,19 +1,34 @@
 name: Update Spotify Song
+
 on:
   schedule:
     - cron: "0 * * * *" # Roda a cada 1 hora
-  workflow_dispatch: # Permite rodar manualmente clicando num botão
+  workflow_dispatch: # Permite rodar manualmente
 
 jobs:
-  update-readme:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Update Spotify
-        uses: natemoo-re/spotify-readme@v1.2.0
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup Python
+        uses: actions/setup-python@v4
         with:
-          readme-section: spotify
-          client-id: ${{ secrets.SPOTIFY_CLIENT_ID }}
-          client-secret: ${{ secrets.SPOTIFY_CLIENT_SECRET }}
-          refresh-token: ${{ secrets.SPOTIFY_REFRESH_TOKEN }}
-          template: "🎵 Ouvindo agora: **{song}** - {artist}" # Personalizei para PT-BR
+          python-version: '3.9'
+
+      - name: Install Dependencies
+        run: pip install requests
+
+      - name: Run Spotify Script
+        env:
+          SPOTIFY_CLIENT_ID: ${{ secrets.SPOTIFY_CLIENT_ID }}
+          SPOTIFY_CLIENT_SECRET: ${{ secrets.SPOTIFY_CLIENT_SECRET }}
+          SPOTIFY_REFRESH_TOKEN: ${{ secrets.SPOTIFY_REFRESH_TOKEN }}
+        run: python update_spotify.py
+
+      - name: Commit and Push changes
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: "🎵 Update Spotify status"
+          file_pattern: README.md
